<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_perfil"
            android:title="@string/perfil" />

        <item
            android:id="@+id/item_descripcion"
            android:title="@string/descripcion" />

        <item
            android:id="@+id/item_personajes"
            android:title="@string/personajes" />

        <item
            android:id="@+id/item_objetos"
            android:title="@string/objetos" />

        <item
            android:id="@+id/item_tips"
            android:title="@string/tips" />

        <item
            android:id="@+id/item_ajustes"
            android:title="@string/ajustes" />
        <item
            android:id="@+id/item_salir"
            android:title="@string/salir" />

    </group>
</menu>